--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: P-Group Notes
 description: A collection of organized notes for students.
-theme: jekyll-theme-minimal
+theme: minimal-mistakes-jekyll
