--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: P-Group Notes
 description: A collection of organized notes for students.
 theme: minimal-mistakes-jekyll
+author: Your Name
+email: your.email@example.com
